fix: card align

--- a/source/sass/blocks/good.scss
+++ b/source/sass/blocks/good.scss
@@ -3,6 +3,7 @@
   box-sizing: border-box;
   height: 100%;
   border-radius: 10px;
+  align-content: start;
   overflow: hidden;
   font-family: $additional-font-family;
   background-color: $background-color;
