--- a/source/sass/blocks/n-collection.scss
+++ b/source/sass/blocks/n-collection.scss
@@ -7,6 +7,7 @@
   border-radius: 10px;
   grid-template-rows: auto 1fr;
   row-gap: 8px;
+  align-content: start;
   font-family: $additional-font-family;
   background-color: $background-color;
   filter: drop-shadow(0px 3px 25px rgba(0, 0, 0, 0.06));
